# console_roguelike

./: AnimationAndSprites.cpp  AnimationAndSprites.h  CMakeLists.txt  Character.cpp  Character.h  LevelDesign.cpp  LevelDesign.h  PlayerItems.cpp  PlayerItems.h  README.md  TextQuest.cpp  TextQuest.h  UserInterface.cpp  UserInterface.h  Utility.cpp  Utility.h  main.cpp  quest.txt
